Fix bug where rankings were not changing when selected template changed. Create edit rankings page for when user is not logged in.

--- a/src/features/customRankings/CustomRankingsPage/CustomRankingsPage.scss
+++ b/src/features/customRankings/CustomRankingsPage/CustomRankingsPage.scss
@@ -4,6 +4,16 @@
         margin-top: 0.6rem;
     }
 
+    .login-link {
+        color: var(--btn-blue-1);
+        cursor: pointer;
+        text-decoration: none;
+    }
+
+    .login-link:hover {
+        color: var(--btn-blue-hover-1);
+    }
+
     .rankings-options {
         display: flex;
         flex-direction: row;
