--- a/src/features/customRankings/Draftable/Draftable.scss
+++ b/src/features/customRankings/Draftable/Draftable.scss
@@ -199,10 +199,17 @@
 
 .draftable.selected {
     background-color: var(--table-header-color);
-    outline: 2px solid var(--table-header-color);
 }
 
 .tier.selected {
     background-color: var(--btn-blue-hover-1);
-    outline: 2px solid var(--table-header-color);
+}
+
+@media (pointer: fine), (pointer: none) {
+	.draftable:hover {
+        background-color: var(--table-header-color);
+    }
+    .tier:not(.top-tier):hover {
+        background-color: var(--btn-blue-hover-1);
+    }
 }
