--- a/src/features/rankings/RankingsPage/RankingsPage.scss
+++ b/src/features/rankings/RankingsPage/RankingsPage.scss
@@ -3,13 +3,21 @@
 
     h1 {
         margin-top: 0.6rem;
-        margin-bottom: 0.8rem;
+        margin-bottom: 0.5rem;
     }
 
     .description {
         margin-bottom: 0.8rem;
         color: var(--grey);
         line-height: 1.5rem;
+    }
+
+    .createdAt-wrapper {
+        display: flex;
+        font-size: 0.8rem;
+        color: var(--grey);
+        margin-bottom: 0.5rem;
+        font-weight: 500;
     }
 
     .options-wrapper {
