New color for tiers. Remove redundant login prompt on edit ranking page.

--- a/src/App.scss
+++ b/src/App.scss
@@ -47,6 +47,7 @@ html {
   --google-blue: #4285F4;
   --box-shadow-light-1: 0px 0px 10px 0px lightgray;
   --submit-btn-light-1: #635AFF;
+  --tier-color: #0542dc;
   --submit-btn-hover-light-1: #3C54D5;
   --link-color-light-1: #635AFF;
   --link-color-hover-light-1: #1a1f35;
