Create draft page.

--- a/src/components/Nav/DefaultNav/DefaultNav.scss
+++ b/src/components/Nav/DefaultNav/DefaultNav.scss
@@ -115,5 +115,6 @@
     }
 }
 .default-nav.shadow {
-    box-shadow: 0 10px 20px -10px var(--grey);
+    box-shadow: 0 10px 10px -10px var(--grey);
+    // border-bottom: 2px solid var(--lightgrey);
 }
