--- a/src/components/PositionFilter/PositionFilter.scss
+++ b/src/components/PositionFilter/PositionFilter.scss
@@ -2,13 +2,15 @@
     display: flex;
 
     button {
-        font-size: 0.8rem;
+        font-size: 0.9rem;
         background-color: white;
-        padding: 0.5rem 1rem 0.5rem 1rem;
+        padding: 0.6rem 0.9rem 0.6rem 0.9rem;
         border-top: 1px solid var(--lightgrey);
         border-bottom: 1px solid var(--lightgrey);
         border-right: 1px solid var(--lightgrey);
         cursor: pointer;
+        font-weight: 600;
+        color: var(--btn-blue-1);
     }
 
     button:hover {
