--- a/src/pages/CustomRankingsPage/CustomRankingsPage.scss
+++ b/src/pages/CustomRankingsPage/CustomRankingsPage.scss
@@ -10,6 +10,12 @@
         text-decoration: none;
     }
 
+    .login-indicator {
+        margin-top: 4rem;
+        text-align: center;
+        font-size: 1rem;
+    }
+
     .login-link:hover {
         color: var(--btn-blue-hover-1);
     }
@@ -25,7 +31,7 @@
     .description {
         margin-left: 3px;
         margin-top: 10px;
-        color: var(--grey);
+        color: black;
     }
 
     .edit-button {
