--- a/src/pages/RankingsPage/RankingsPage.scss
+++ b/src/pages/RankingsPage/RankingsPage.scss
@@ -8,8 +8,9 @@
 
     .description {
         margin-bottom: 0.8rem;
-        color: var(--grey);
-        line-height: 1.5rem;
+        color: black;
+        line-height: 1.4rem;
+        font-size: 0.9rem;
     }
 
     .createdAt-wrapper {
@@ -22,15 +23,15 @@
 
     .options-wrapper {
         display: flex;
-        flex-direction: column;
+        flex-direction: row;
         justify-content: space-between;
+        flex-wrap: wrap;
 
         .options-row {
             display: flex;
             flex-direction: row;
+            align-items: center;
             width: 100%;
-            justify-content: space-between;
-            flex-wrap: wrap-reverse;
         }
 
         .select-filter,
@@ -59,6 +60,7 @@
             font-size: 0.9rem;
             font-weight: 600;
             box-shadow: var(--box-shadow-1);
+            margin-left: 0.8rem;
 
             .new-icon {
                 padding-left: 0.1rem;
